# dodorail

./: .env.example  .gitignore  .npmrc  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.base.json  turbo.json
.github/: dependabot.yml
.github/workflows/: agent-cron.yml
apps/agent/: README.md  package.json  tsconfig.json
apps/agent/src/: agent-loop.ts  index.ts  notifier.ts  reasoner.ts
apps/agent/src/actions/: alert.ts  zap-in.ts
apps/agent/src/adapters/: goldrush.ts  index.ts  zerion-x402.ts  zerion.ts
apps/agent/src/classifiers/: inflow.ts
apps/agent/src/heuristics/: deltas.ts
apps/agent/src/squads/: delegated-signer.ts
apps/agent/src/utils/: with-retry.ts
apps/docs/: README.md
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/src/: instrumentation-client.ts  instrumentation.ts  middleware.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/judges/: page.tsx
apps/web/src/components/: dune-volume-tile.tsx  treasury-vault-card.tsx  wallet-pill.tsx  zap-out-button.tsx
apps/web/src/components/auth/: sign-in-card.tsx  sign-out-button.tsx
apps/web/src/lib/: analytics.ts  auth.ts  session.ts  sns.ts  solana-pay.ts  solana.ts  treasury-service.ts  utils.ts
migrations/: deploy.ts
programs/dodorail/: Cargo.toml  DEVNET_DEPLOY.md  README.md
programs/dodorail/src/: lib.rs
tests/: dodorail.ts
(+37 files in other folders)
