[package]
name = "dodorail"
version = "0.1.0"
description = "DodoRail onchain invoice program — 2 instructions, Squads-custodial escrow"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dodorail"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
